Examples/test-suite/errors/cpp_raw_string_termination.i
%module xxx

%feature("docstring") func2 R"ABC(Calculate :math:`D^\nu \rho(x)`.)AB";
void func2(double* foo, int bar, char** baz);
