Examples/test-suite/errors/cpp_raw_string_termination.stderr
cpp_raw_string_termination.i:3: Error: Unterminated raw string, started with R"ABC( is not terminated by )ABC"
cpp_raw_string_termination.i:3: Error: Syntax error in input(1).
